Fixed dark mode icon. Image was not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,9 +21,11 @@
   --font-mono: var(--font-geist-mono);
 }
 
-.dark{
-  --background: #0a0a0a;
-  --foreground: #ededed;
+@media (prefers-color-scheme: dark) {
+  :root{
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
 }
 
 body {
